<resources>
    <string name="app_name">Spike</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="date">Fecha</string>
    <string name="hour">Hora</string>
    <string name="send">Enviar</string>
    <string name="cite">Cita</string>
    <string name="baño">Baño</string>
    <string name="selectbano">No ha seleccionado baño</string>
    <string name="miportal">Mi portal</string>
    <string name="veterinarias">Veterinarias</string>
    <string name="descripcion_de_cita">Descripcion de cita</string>
    <string name="describe">Describe</string>
    <string name="ok">ok</string>
    <string name="descripcion_de_la_cita">Descripcion de la cita</string>
    <string name="hora_y_fecha">Hora y fecha</string>
    <string name="email">Correo</string>
    <string name="password">Contraseña</string>
    <string name="register">Registro</string>
    <string name="login">Iniciar</string>
    <string name="login_register">Login</string>
    <string name="spike">Spike</string>
    <string name="logotipoinicio">logotipoinicio</string>
    <string name="citas_pedidas">citas pedidas</string>
    <string name="colors_you_most_like">Colors you most like?</string>
    <string name="animalvet">Animalvet</string>
    <string name="veterinaria_oasis">Veterinaria oasis</string>
    <string name="veterinaria_mi_maskota">Veterinaria mi maskota</string>
    <string name="agroveterinaria_mis_potrillos">Agroveterinaria Mis Potrillos</string>
    <string name="maceo">Maceo</string>
    <string name="animal_house">Animal House</string>
    <string name="agroveterinaria_la_hojarasca">Agroveterinaria La Hojarasca</string>
    <string name="imagen">imagen</string>
</resources>
