<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:padding="10dp">

    <TextView
        android:text="@string/descripcion_de_cita"
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/describecita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginTop="10dp"
        android:inputType="textPersonName"
        android:hint="@string/describe"
        android:layout_weight="0.09" />
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <TextView
            android:id="@+id/tvfechadialog"
            android:layout_width="71dp"
            android:layout_height="25dp"
            android:text=""
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="17dp"
            app:layout_constraintTop_toBottomOf="parent"
            android:layout_marginRight="270dp"
            android:layout_marginEnd="270dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/btnfechadialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="116dp"
            android:text="@string/date"
            app:layout_constraintTop_toBottomOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            android:layout_marginTop="-109dp"
            app:layout_constraintLeft_toRightOf="@+id/tvfechadialog"
            android:layout_marginLeft="69dp" />

        <TextView
            android:id="@+id/tvhoradialog"
            android:layout_width="66dp"
            android:layout_height="21dp"
            android:layout_marginTop="30dp"
            android:text=""
            app:layout_constraintLeft_toLeftOf="@+id/tvfechadialog"
            app:layout_constraintTop_toBottomOf="@+id/tvfechadialog"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintTop_creator="1"
            tools:layout_editor_absoluteY="64dp" />

        <Button
            android:id="@+id/btnhoradialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintLeft_toRightOf="@+id/tvhoradialog"
            android:layout_marginLeft="64dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.447"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/btnfechadialog"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />
    </android.support.constraint.ConstraintLayout>
    <Button
        android:id="@+id/btnokcita"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"
        android:text="@string/ok" />

</LinearLayout>