<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spikec.spikec.login">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="248dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.498"
        android:layout_marginStart="63dp"
        android:layout_marginEnd="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginRight="63dp"
        android:id="@+id/constraintLayout">

    </android.support.constraint.ConstraintLayout>

    <EditText
        android:id="@+id/tvregistro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="29dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/constraintLayout"
        android:layout_marginLeft="20dp" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/tvregistro"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintRight_toLeftOf="@+id/button3"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/constraintLayout"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/editText6"
        app:layout_constraintHorizontal_bias="0.511" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginRight="23dp"
        app:layout_constraintRight_toRightOf="@+id/constraintLayout"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />

</android.support.constraint.ConstraintLayout>
