<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.spikec.spikec.cita">

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="312dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginRight="7dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="7dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="7dp"
        android:id="@+id/constraintLayout2"
        tools:layout_constraintRight_creator="1">

        <Button
            android:id="@+id/btncita"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:background="@drawable/boton_redondo"
            android:text="@string/cite"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintTop_creator="1" />

        <EditText
            android:id="@+id/descripcioncita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/descripcion_de_la_cita"
            tools:layout_constraintTop_creator="1"
            tools:layout_constraintRight_creator="1"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toBottomOf="@+id/btncita"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.103"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnenviarcita"
            android:background="@drawable/boton_redondo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="51dp"
            app:layout_constraintTop_toBottomOf="@+id/btncita"
            android:layout_marginRight="4dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"

            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.91"
            app:layout_constraintVertical_bias="0.12" />

        <EditText
            android:id="@+id/fechaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="22dp"
            android:ems="10"
            android:hint="@string/hora_y_fecha"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@+id/constraintLayout2"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintLeft_creator="1" />

    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>
